[gd_scene load_steps=14 format=3 uid="uid://hqfrgdphxdrl"]

[ext_resource type="Script" uid="uid://cmjrdjr725xxf" path="res://Scripts/location.gd" id="1_hr3m3"]
[ext_resource type="Texture2D" uid="uid://re0t2t7i5i41" path="res://Cases/Binary_Trap/Assets/Minigame2/minigame2_closeUp.png" id="2_gt2d2"]
[ext_resource type="Script" uid="uid://cl6f77kjtwyhy" path="res://Cases/Binary_Trap/Scripts/minigame2.gd" id="2_hex8g"]
[ext_resource type="Script" uid="uid://c5qtuytooefmh" path="res://Scripts/hint.gd" id="2_pxh7d"]
[ext_resource type="PackedScene" uid="uid://dofebqelw66y3" path="res://Cases/Binary_Trap/Scenes/Minigames/lamp_and_switch.tscn" id="2_ydl5m"]
[ext_resource type="Script" uid="uid://bfe303xauflwy" path="res://Scripts/hint_condition.gd" id="3_22po7"]
[ext_resource type="Texture2D" uid="uid://byxws6tx0mpd6" path="res://Cases/Binary_Trap/Assets/Minigame2/tape.png" id="3_dtrl5"]
[ext_resource type="PackedScene" uid="uid://ml5btby7kwxh" path="res://Scenes/back_button.tscn" id="5_06qji"]
[ext_resource type="FontFile" uid="uid://1i8a1hw0ikpw" path="res://Assets/Fonts/ReenieBeanie-Regular.ttf" id="6_pssty"]

[sub_resource type="Resource" id="Resource_nince"]
script = ExtResource("3_22po7")
mode = 0
required_items = Array[String]([])
metadata/_custom_type_script = "uid://bfe303xauflwy"

[sub_resource type="Resource" id="Resource_22po7"]
script = ExtResource("2_pxh7d")
hint_text = "Die Glühbirnen zeigen dir an, ob der Wert der Stelle mit 0 (Lampe aus) oder 1 (Lampe an) multipliziert wird."
hint_condition = SubResource("Resource_nince")
metadata/_custom_type_script = "uid://c5qtuytooefmh"

[sub_resource type="Resource" id="Resource_8s6ww"]
script = ExtResource("3_22po7")
mode = 0
required_items = Array[String]([])
metadata/_custom_type_script = "uid://bfe303xauflwy"

[sub_resource type="Resource" id="Resource_pxh7d"]
script = ExtResource("2_pxh7d")
hint_text = "Die vier Glühbirnen stehen für vier Stellen einer Binärzahl. Die rechte Lampe hat den Wert 1, die nächste 2, dann 4 und die linke 8. Leuchtet eine Lampe, bedeutet das, es steht eine 1 an dieser Stelle – ihr Wert wird also mitgezählt. Sind mehrere Lampen an, werden ihre Werte addiert. So ergibt sich die Dezimalzahl."
hint_condition = SubResource("Resource_8s6ww")
metadata/_custom_type_script = "uid://c5qtuytooefmh"

[node name="Minigame 2" type="Node"]
script = ExtResource("1_hr3m3")
location_name = "Minigame 2"
hints = Array[ExtResource("2_pxh7d")]([SubResource("Resource_22po7"), SubResource("Resource_pxh7d")])
metadata/_custom_type_script = "uid://cmjrdjr725xxf"

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.299939, 0.299939)
texture = ExtResource("2_gt2d2")

[node name="Tape" type="TextureRect" parent="."]
offset_left = 315.0
offset_top = 226.0
offset_right = 465.0
offset_bottom = 376.0
rotation = 0.940105
texture = ExtResource("3_dtrl5")

[node name="Minigame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -200.0
offset_top = -295.0
offset_right = -160.0
offset_bottom = -255.0
scale = Vector2(1.32736, 1.32736)
script = ExtResource("2_hex8g")

[node name="Input Label" type="Label" parent="Minigame"]
layout_mode = 0
offset_left = 339.772
offset_top = 442.985
offset_right = 421.772
offset_bottom = 492.985
rotation = 0.0854013
theme_override_colors/font_color = Color(0.485703, 0.485704, 0.485703, 1)
theme_override_font_sizes/font_size = 36
text = "1001"

[node name="HBoxContainer" type="HBoxContainer" parent="Minigame"]
layout_mode = 0
offset_left = 316.0
offset_top = 263.247
offset_right = 646.0
offset_bottom = 303.247
theme_override_constants/separation = 110

[node name="Lamp and Switch" parent="Minigame/HBoxContainer" instance=ExtResource("2_ydl5m")]
layout_mode = 2

[node name="Lamp and Switch2" parent="Minigame/HBoxContainer" instance=ExtResource("2_ydl5m")]
layout_mode = 2

[node name="Lamp and Switch3" parent="Minigame/HBoxContainer" instance=ExtResource("2_ydl5m")]
layout_mode = 2

[node name="Lamp and Switch4" parent="Minigame/HBoxContainer" instance=ExtResource("2_ydl5m")]
layout_mode = 2

[node name="Result Label" type="Label" parent="Minigame"]
layout_mode = 0
offset_left = 807.301
offset_top = 263.247
offset_right = 847.301
offset_bottom = 297.247
theme_override_font_sizes/font_size = 24

[node name="Tape" type="TextureRect" parent="Minigame"]
layout_mode = 0
offset_left = 750.362
offset_top = 410.589
offset_right = 900.362
offset_bottom = 560.589
rotation = 0.723539
scale = Vector2(0.651945, 0.651945)
texture = ExtResource("3_dtrl5")

[node name="Restart Button" type="Button" parent="Minigame"]
visible = false
layout_mode = 0
offset_left = 709.679
offset_top = 438.464
offset_right = 867.679
offset_bottom = 596.464
rotation = -0.037043
scale = Vector2(0.551295, 0.551295)
theme_override_colors/font_hover_color = Color(0.678944, 0.678944, 0.678944, 1)
theme_override_colors/font_color = Color(0.336608, 0.336608, 0.336608, 1)
theme_override_fonts/font = ExtResource("6_pssty")
theme_override_font_sizes/font_size = 36
text = "Nochmal"
flat = true

[node name="BackButton" parent="." instance=ExtResource("5_06qji")]
offset_left = 8.0
offset_top = 8.0
offset_right = 520.0
offset_bottom = 520.0
scale = Vector2(0.266106, 0.266106)
requested_location_name = "Room LightsOn"

[connection signal="pressed" from="Minigame/Restart Button" to="Minigame" method="_on_restart_button_pressed"]
